--- a/README
+++ b/README
@@ -11,7 +11,7 @@ fcm checkout https://code.metoffice.gov.uk/svn/monc/casim/branches/dev/weizhang/
 cp -r casim/src MPI-KiD/src/casim
 
 3. Modify MPI-KiD/src/compiler_options.inc for compiler options at different platforms
-ifeq ($(VENDOR), YOUR_COMPIER)
+ifeq ($(VENDOR), YOUR_COMPILER)
 NCINC= ...
 NCLIB= ...
 MPIINC= ...
