--- a/README
+++ b/README
@@ -16,7 +16,7 @@ NCINC= ...
 NCLIB= ...
 MPIINC= ...
 MPILIB= ...
-(note: pay attenction to MPI module in -I$(MPILIB) -lXXX too)
+(note: pay attenction to MPILIB in -I$(MPILIB) -lXXX too)
 
 4. ./build.sh, execution file will be created in MPI-KiD/bin
 
